--- a/dados_refseq.ipynb
+++ b/dados_refseq.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.chdir(\"C:/Users/User/Desktop/USP/Projeto/\") #Diretório"
+    "os.chdir(\"path/\") #Diretório"
    ]
   },
   {
