--- a/VolcanoPlot.ipynb
+++ b/VolcanoPlot.ipynb
@@ -1393,7 +1393,7 @@
     "#plt.scatter(x=diff['logFC'],y=down['adj.P.Val'].apply(lambda x:-np.log10(x)),s=3,label=\"Down-regulated\",color=\"blue\")\n",
     "plt.xlabel(\"Differential Prevalence (Sample1 - Sample2)\")\n",
     "plt.ylabel(\"-log10(p-value)\")\n",
-    "plt.title(\"Vfam Diferença\")\n",
+    "plt.title(\"Vfam Diferença NF DF\")\n",
     "plt.legend()\n",
     "plt.tight_layout()\n",
     "plt.show()"
