--- a/NFS13_DM.ipynb
+++ b/NFS13_DM.ipynb
@@ -46,7 +46,7 @@
     }
    ],
    "source": [
-    "NFS13 = \"C:/Users/User/Desktop/USP/Projeto/Hits/NFS13.fasta\"\n",
+    "NFS13 = \"path/NFS13.fasta\"\n",
     "gc_data = []\n",
     "comprimento = []\n",
     "\n",
